modules/nat_instance.tf
resource "aws_network_interface" "frog_network_interface" {
  subnet_id   = aws_subnet.frog-public-1.id
  private_ips = ["10.15.21.220"]

  tags = {
    Name = "primary_network_interface"
  }
}

# NAT 인스턴스 생성
resource "aws_instance" "nat_instance" {
  ami           = var.AMIS[var.AWS_REGION] # NAT 인스턴스 AMI ID를 설정합니다.
  instance_type = "t4g.micro"
  key_name      = aws_key_pair.mykeypair.key_name # 키페어 이름을 설정합니다.

  # 여러 네트워크 인터페이스를 정의할 수 있습니다.
  network_interface {
    network_interface_id = aws_network_interface.frog_network_interface.id
    device_index         = 0
  }

  tags = {
    Name = "frog-nat-instance"
  }
}

// nat instance security group 
// inbound : ssh 22 all traffic 
// inbound : all traffic
// outbound : all traffic
resource "aws_security_group" "nat_sg" {
  vpc_id = aws_vpc.frog.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "frog-nat-sg"
  }
}

# route for NAT instance in private route table
resource "aws_route" "nat_route_private_1" {
  route_table_id         = aws_route_table.frog-private.id
  destination_cidr_block = "0.0.0.0/0"
  network_interface_id   = aws_network_interface.frog_network_interface.id
  depends_on             = [aws_instance.nat_instance]
}

# nat instance eip 
resource "aws_eip" "nat_eip" {
  domain   = "vpc"
  instance = aws_instance.nat_instance.id

  tags = {
    Name = "frog-nat-eip"
  }
}
